Added exercises Installationsteps reduced

--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@ host = localhost
 username = SA
 password = DB3&3DB&DB3
 port = 1433
-[mydb]
+[tutorial_op]
 database = tutorial_op
 host = localhost
 username = SA
