--- a/config.ini
+++ b/config.ini
@@ -20,4 +20,8 @@ port = 5432
 kafka.bootstrap.servers = pkc-6ojv2.us-west4.gcp.confluent.cloud:9092
 topic =firstTest
 kafka.sasl.username=
-kafka.sasl.password = 
+kafka.sasl.password =
+[operational_db]
+url = jdbc:postgresql://localhost:5432/velodb
+username = postgres
+password = DB3DB3DB3
