--- a/config.ini
+++ b/config.ini
@@ -10,12 +10,30 @@ port = 5432
 [tutorial_op]
 driver_repo = org.postgresql:postgresql:42.7.4
 driver = org.postgresql.Driver
-url = jdbc:postgresql://localhost:5432/tutorial_op?user=postgres&password=DB3DB3DB3&ssl=false
+url = jdbc:postgresql://localhost:5432/tutorial_op?user=postgres&password=Student_1234&ssl=false
 database = tutorial_op
 host = localhost
 username = postgres
-password = DB3DB3DB3
+password = Student_1234
 port = 5432
+[velodb]
+driver_repo = org.postgresql:postgresql:42.7.4
+driver = org.postgresql.Driver
+url = jdbc:postgresql://localhost:5433/velodb?user=postgres&password=Student_1234&ssl=false
+database = velodb
+host = localhost
+username = postgres
+password = Student_1234
+port = 5433
+[dw_rides]
+driver_repo = org.postgresql:postgresql:42.7.4
+driver = org.postgresql.Driver
+url = jdbc:postgresql://localhost:5433/dw_rides?user=postgres&password=Student_1234&ssl=false
+database = dw_rides
+host = localhost
+username = postgres
+password = Student_1234
+port = 5433
 [kafka]
 kafka.bootstrap.servers = pkc-6ojv2.us-west4.gcp.confluent.cloud:9092
 topic =firstTest
